2. Algo Expert/k8/questions-db-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "questions-db"
  namespace: "default"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "questions-db"
  template:
    metadata:
      labels:
        app: "questions-db"
    spec:
      containers:
      - name: "questions-db"
        image: 'postgres:9.6'
        ports:
          - containerPort: 5432
            name: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: "questions-db"
