2. Algo Expert/k8/solution-tester-worker-app-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "solution-tester-worker-app"
  namespace: "default"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "solution-tester-worker-app"
  template:
    spec:
      containers:
        - name: "solution-tester-worker-app"
          image: "solution-tester-worker-app"
          imagePullPolicy: Never

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "solution-tester-worker-app-service"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 5003
      targetPort: 5003
  selector:
    app: "solution-tester-worker-app"
