2. Algo Expert/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: 'static-website-app-service'
            port:
              number: 80
      - path: /question-solution-checker-app
        pathType: Prefix
        backend:
          service:
            name: "question-solution-checker-app-service"
            port:
              number: 5001
      - path: /questions-server-app
        pathType: Prefix
        backend:
          service:
            name: "questions-server-app-service"
            port:
              number: 5002
      - path: /solution-tester-worker-app
        pathType: Prefix
        backend:
          service:
            name: "solution-tester-worker-app-service"
            port:
              number: 5003
